--- a/for_build/etc/thingsboard-gateway/config/tb_gateway.yaml
+++ b/for_build/etc/thingsboard-gateway/config/tb_gateway.yaml
@@ -7,7 +7,7 @@ thingsboard:
   minPackSendDelayMS: 0
   checkConnectorsConfigurationInSeconds: 60
   security:
-    accessToken: jl67DQyjb5LLYsIoz2GA
+    accessToken: PUT_YOUR_GW_ACCESS_TOKEN_HERE
   qos: 1
 storage:
   type: memory
