--- a/for_build/etc/thingsboard-gateway/config/tb_gateway.yaml
+++ b/for_build/etc/thingsboard-gateway/config/tb_gateway.yaml
@@ -1,24 +1,27 @@
 thingsboard:
   host: thingsboard.cloud
-  port: 443
+  port: 1883
   remoteShell: false
   remoteConfiguration: false
-  statistics:
-    enable: true
-    statsSendPeriodInSeconds: 3600
+  statsSendPeriodInSeconds: 3600
   minPackSendDelayMS: 0
   checkConnectorsConfigurationInSeconds: 60
-  handleDeviceRenaming: true
-  checkingDeviceActivity:
-    checkDeviceInactivity: false
-    inactivityTimeoutSeconds: 120
-    inactivityCheckPeriodSeconds: 10
   security:
     accessToken: jl67DQyjb5LLYsIoz2GA
+  qos: 1
 storage:
   type: memory
-  read_records_count: 10
-  max_records_count: 1000
+  read_records_count: 100
+  max_records_count: 100000
+#  type: file
+#  data_folder_path: ./data/
+#  max_file_count: 10
+#  max_read_records_count: 10
+#  max_records_per_file: 10000
+#  type: sqlite
+#  data_file_path: ./data/data.db
+#  messages_ttl_check_in_hours: 1
+#  messages_ttl_in_days: 7
 grpc:
   enabled: false
   serverPort: 9595
@@ -29,118 +32,78 @@ grpc:
   minTimeBetweenPingsMs: 10000
   minPingIntervalWithoutDataMs: 5000
 connectors:
-
   -
     name: MQTT Broker Connector
     type: mqtt
     configuration: mqtt.json
 
-# thingsboard:
-#   host: thingsboard.cloud
-#   port: 1883
-#   remoteShell: false
-#   remoteConfiguration: false
-#   statsSendPeriodInSeconds: 3600
-#   minPackSendDelayMS: 0
-#   checkConnectorsConfigurationInSeconds: 60
-#   security:
-#     accessToken: jl67DQyjb5LLYsIoz2GA
-#   qos: 1
-# storage:
-#   type: memory
-#   read_records_count: 100
-#   max_records_count: 100000
-# #  type: file
-# #  data_folder_path: ./data/
-# #  max_file_count: 10
-# #  max_read_records_count: 10
-# #  max_records_per_file: 10000
-# #  type: sqlite
-# #  data_file_path: ./data/data.db
-# #  messages_ttl_check_in_hours: 1
-# #  messages_ttl_in_days: 7
-# grpc:
-#   enabled: false
-#   serverPort: 9595
-#   keepaliveTimeMs: 10000
-#   keepaliveTimeoutMs: 5000
-#   keepalivePermitWithoutCalls: true
-#   maxPingsWithoutData: 0
-#   minTimeBetweenPingsMs: 10000
-#   minPingIntervalWithoutDataMs: 5000
-# connectors:
-#   -
-#     name: MQTT Broker Connector
-#     type: mqtt
-#     configuration: mqtt.json
-
-# #  -
-# #    name: Modbus Connector
-# #    type: modbus
-# #    configuration: modbus.json
-# #
-# #  -
-# #    name: Modbus Connector
-# #    type: modbus
-# #    configuration: modbus_serial.json
-# #
-# #  -
-# #    name: OPC-UA Connector
-# #    type: opcua
-# #    configuration: opcua.json
-# #
-# #  -
-# #    name: BLE Connector
-# #    type: ble
-# #    configuration: ble.json
-# #
-# #  -
-# #    name: REQUEST Connector
-# #    type: request
-# #    configuration: request.json
-# #
-# #  -
-# #    name: CAN Connector
-# #    type: can
-# #    configuration: can.json
-# #
-# #  -
-# #    name: BACnet Connector
-# #    type: bacnet
-# #    configuration: bacnet.json
-# #
-# #  -
-# #    name: ODBC Connector
-# #    type: odbc
-# #    configuration: odbc.json
-# #
-# #  -
-# #    name: REST Connector
-# #    type: rest
-# #    configuration: rest.json
-# #
-# #  -
-# #    name: SNMP Connector
-# #    type: snmp
-# #    configuration: snmp.json
-# #
-# #  -
-# #    name: FTP Connector
-# #    type: ftp
-# #    configuration: ftp.json
-# #
-# #
-# # ========= Customization ==========
-# #
-# #
-# #  -
-# #    name: Custom Serial Connector
-# #    type: serial
-# #    configuration: custom_serial.json
-# #    class: CustomSerialConnector
-# #
-# #  -
-# #    name: GRPC Connector 1
-# #    key: auto
-# #    type: grpc
-# #    configuration: grpc_connector_1.json
+#  -
+#    name: Modbus Connector
+#    type: modbus
+#    configuration: modbus.json
+#
+#  -
+#    name: Modbus Connector
+#    type: modbus
+#    configuration: modbus_serial.json
+#
+#  -
+#    name: OPC-UA Connector
+#    type: opcua
+#    configuration: opcua.json
+#
+#  -
+#    name: BLE Connector
+#    type: ble
+#    configuration: ble.json
+#
+#  -
+#    name: REQUEST Connector
+#    type: request
+#    configuration: request.json
+#
+#  -
+#    name: CAN Connector
+#    type: can
+#    configuration: can.json
+#
+#  -
+#    name: BACnet Connector
+#    type: bacnet
+#    configuration: bacnet.json
+#
+#  -
+#    name: ODBC Connector
+#    type: odbc
+#    configuration: odbc.json
+#
+#  -
+#    name: REST Connector
+#    type: rest
+#    configuration: rest.json
+#
+#  -
+#    name: SNMP Connector
+#    type: snmp
+#    configuration: snmp.json
+#
+#  -
+#    name: FTP Connector
+#    type: ftp
+#    configuration: ftp.json
+#
+#
+# ========= Customization ==========
+#
+#
+#  -
+#    name: Custom Serial Connector
+#    type: serial
+#    configuration: custom_serial.json
+#    class: CustomSerialConnector
+#
+#  -
+#    name: GRPC Connector 1
+#    key: auto
+#    type: grpc
+#    configuration: grpc_connector_1.json
